--- a/gamestore/views/productDetail.html
+++ b/gamestore/views/productDetail.html
@@ -12,12 +12,23 @@
         <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
         <title>GameStore</title>
     </head>
+    <header>
+        <div class="img-logo-header">
+            <img id="logo-header"src="/images/favicon-96x96.png" alt="GameStore">
+        </div>
+        <div>
+
+        </div>
+        <div class= "menu-desplegable">
+            <i class="fas fa-caret-square-down"></i>
+        </div>
+    </header>
+    <div id="relleno"></div>
     <body>
         <main>
             <p>
             <img class="img-principal" src="/images/family-disruption1.jpg" alt="Family Disruption">
-        </p>
-    </main>
+        </p>  
     <section class="main-descripcion">
         <article class="descripcion-producto">
             <h2>Nine Witches: Family Disruption</h2>
@@ -99,15 +110,34 @@
     </section>
     <section class="complementos">
         <h4>Complementos</h4>
-    </section>
-    <section>
         <article class="informacion-legal">
             Copyright © 2017 Indiesruption<br>
             <a href="https://www.blowfishstudios.com/privacy">BLOWFISH STUDIOS PTY LTD Privacy Policy & EULA</a>
-        </article>  
+        </article>
     </section>
+</main>
     <footer>
-
+        <div>
+            <img class="img-logo-footer" src="/images/favicon-96x96.png" alt="GameStore"> 
+        </div>
+        <div>
+            <i id="redes"class="fab fa-twitter-square"></i>
+            <i id="redes"class="fab fa-facebook-square"></i>
+            <i id="redes"class="fab fa-instagram-square"></i>
+        </div>
+        <div class="links-footer">
+            <p>Publicar en GameStore</p>
+            <p>Trabajá con nosotros</p>
+            <p>Acerca de la compañía</p>
+            <p>Política de privacidad</p>
+            <p>Política de reembolso de la tienda</p>
+            <p>Seguridad de la cuenta</p>
+            <p>Club GameStore</p>
+            <p>Newsletter</p>
+        </div>
+        <div class="informacion-legal">
+            © 2021, Game Store, Inc. Todos los derechos reservados. El logotipo de GameStore es una marca comercial o marca registrada de Game Store, Inc. tanto en Argentina como en el resto del mundo. Otras marcas o nombres de productos son marcas comerciales de sus respectivos propietarios. Las transacciones fuera de Argentina se realizan a través de GameStore International, S.A.   
+        </div>
     </footer>
 </body>
 </html>
