--- a/gamestore/views/productDetail.html
+++ b/gamestore/views/productDetail.html
@@ -16,9 +16,18 @@
         <div class="img-logo-header">
             <img id="logo-header"src="/images/favicon-96x96.png" alt="GameStore">
         </div>
-        <div>
-
-        </div>
+        <nav class="main-navbar">
+            <ul>
+                <li class="primer-color">Plataforma <i class="fas fa-caret-down"></i></li>
+                <li class="segundo-color">Edades <i class="fas fa-caret-down"></i></li>
+                <li class="tercer-color">Dificultad <i class="fas fa-caret-down"></i></li>
+                <li class="cuarto-color">Categorías <i class="fas fa-caret-down"></i></li>
+            </ul>
+        </nav>
+        <div class="barra-busqueda">
+            <input type="search" id="search"><br>
+                <i id="find" class="fas fa-search"></i>
+            </div>
         <div class= "menu-desplegable">
             <i class="fas fa-caret-square-down"></i>
         </div>
