--- a/gamestore/views/productDetail.html
+++ b/gamestore/views/productDetail.html
@@ -28,6 +28,7 @@
             <input type="search" id="search"><br>
                 <i id="find" class="fas fa-search"></i>
             </div>
+            <div class="log-sign">Log in/ Sign up</div>
         <div class= "menu-desplegable">
             <i class="fas fa-caret-square-down"></i>
         </div>
@@ -54,16 +55,19 @@
                 <p class="esrb-detail">ESRB: Adolescentes</p>
             </div>
             </article>
-        <article class="datos-tecnicos">
+            <div class="tecnicos">
+            <h4>Datos técnicos</h4>
+            <article class="datos-tecnicos">
             <p>1 jugador</p>
             <p>Plataforma: PS4/PS5/PC</p>
             <p>Lanzamiento: 4/12/2020</p>
             <p>Editor: BLOWFISH STUDIOS PTY LTD</p>
             <p>Género: Aventura</p>
             <p>Idiomas de pantalla: Alemán, Chino - Simplificado, Chino - Tradicional, Español, Francés (Francia), Inglés, Portugués (Brasil), Ruso.</p>
+            </div>
         </article>
         <article class="requisitos-pc">
-            <h4>REQUISITOS DEL SISTEMA</h4>
+            <h4>Requisitos del sistema</h4>
             <h6>MÍNIMO:</h6>
             <div class="requisitos-min"> 
                 <p>Requiere un procesador y un sistema operativo de 64 bits</p>
@@ -81,33 +85,23 @@
     </section>
     <section>
         <article class="resumen">
-            Octubre de 1944. Algo extraño está sucediendo en Sundäe, un rústico pueblo noruego donde una misteriosa luna oscura se cierne sobre el cielo, generando incertidumbre entre sus habitantes.
+            Características:<br>
             
-            Mientras la Segunda Guerra Mundial continúa, la Okkulte-55, una división secreta del Tercer Reich, llega a Sundäe para desatar una antigua maldición en un acto desesperado por cambiar las tornas de la guerra.
+            - Una historia verdaderamente original y única (99,999999 % GARANTIZADO).<br>
             
-            Alexei Krakovitz, un profesor tetrapléjico experto en ciencias ocultas, y Akiro Kagasawa, su fiel asistente, son enviados a Noruega en una misión secreta para desentrañar el misterio y salvar al mundo de las garras de la Okkulte-55.
+            - Acción y aventura para un jugador, con elementos de ingenio.<br>
             
-            Una historia original con un absurdo humor oscuro, plagada de personajes excéntricos, inventos diabólicos, acertijos, ocultismo, muertos que hablan, brujas, gusanos, una misteriosa fiesta y una maldición ancestral que amenaza a la humanidad.
+            - Únete al profesor Alexei Krakovitz y su leal asistente japonés, Akiro Kagasawa, en su heroica cruzada contra la Okkulte-55.<br>
             
-            ¡Una aventura tan delirante que te hará delirar hasta el delirio mismo!
+            - Gráficos pixelados al estilo retro.<br>
             
-            ¡Ja, ja!
+            - ¡Un elenco de personajes peculiares!<br>
             
-            Características:
+            - Visita Sundäe, un pueblo oprimido por la Okkulte-55, en la costa noroeste de Noruega.<br>
             
-            - Una historia verdaderamente original y única (99,999999 % GARANTIZADO).
-            
-            - Acción y aventura para un jugador, con elementos de ingenio.
-            
-            - Únete al profesor Alexei Krakovitz y su leal asistente japonés, Akiro Kagasawa, en su heroica cruzada contra la Okkulte-55.
-            
-            - Gráficos pixelados al estilo retro.
-            
-            - ¡Un elenco de personajes peculiares!
-            
-            - Visita Sundäe, un pueblo oprimido por la Okkulte-55, en la costa noroeste de Noruega.
-            
-            - Habla con los muertos.
+            - Habla con los muertos.<br>
+
+            ¡Una aventura tan delirante que te hará delirar hasta el delirio mismo!<br>
         </article>
     </section>
     <section class="version">
@@ -119,6 +113,7 @@
     </section>
     <section class="complementos">
         <h4>Complementos</h4>
+    </section>
         <article class="informacion-legal">
             Copyright © 2017 Indiesruption<br>
             <a href="https://www.blowfishstudios.com/privacy">BLOWFISH STUDIOS PTY LTD Privacy Policy & EULA</a>
@@ -129,22 +124,26 @@
         <div>
             <img class="img-logo-footer" src="/images/favicon-96x96.png" alt="GameStore"> 
         </div>
-        <div>
+        <div class="redes-sociales">
             <i id="redes"class="fab fa-twitter-square"></i>
             <i id="redes"class="fab fa-facebook-square"></i>
             <i id="redes"class="fab fa-instagram-square"></i>
         </div>
         <div class="links-footer">
-            <p>Publicar en GameStore</p>
-            <p>Trabajá con nosotros</p>
-            <p>Acerca de la compañía</p>
-            <p>Política de privacidad</p>
+            <div class="first-column">
+                <p>Publicar en GameStore</p>
+                <p>Trabajá con nosotros</p>
+                <p>Acerca de la compañía</p>
+                <p>Política de privacidad</p>
+            </div>
+            <div class="second-column">
             <p>Política de reembolso de la tienda</p>
             <p>Seguridad de la cuenta</p>
             <p>Club GameStore</p>
             <p>Newsletter</p>
         </div>
-        <div class="informacion-legal">
+        </div>
+        <div class="informacion-legal-footer">
             © 2021, Game Store, Inc. Todos los derechos reservados. El logotipo de GameStore es una marca comercial o marca registrada de Game Store, Inc. tanto en Argentina como en el resto del mundo. Otras marcas o nombres de productos son marcas comerciales de sus respectivos propietarios. Las transacciones fuera de Argentina se realizan a través de GameStore International, S.A.   
         </div>
     </footer>
