--- a/gamestore/views/productDetail.html
+++ b/gamestore/views/productDetail.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
         <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
         <title>GameStore</title>
@@ -25,10 +26,14 @@
             </ul>
         </nav>
         <div class="barra-busqueda">
-            <input type="search" id="search"><br>
-                <i id="find" class="fas fa-search"></i>
+            <div>
+            <input type="search" id="search">
+                <i id="find" class="fas fa-search"></i><br>
             </div>
-            <div class="log-sign">Log in/ Sign up</div>
+                <div class="log-sign">
+                    Log in/ Sign up
+                </div>
+            </div>
         <div class= "menu-desplegable">
             <i class="fas fa-caret-square-down"></i>
         </div>
