--- a/gamestore/public/css/styles-shoppingcart.css
+++ b/gamestore/public/css/styles-shoppingcart.css
@@ -1,3 +1,43 @@
 * {
-    font-family: "Open Sans";
+    font-family: 'Lato';
+    color: white;
+    font-weight: bold;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(29, 26, 26);
+}
+
+main {
+    background-color: grey;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 6px solid #8F4DB5;
+    border-radius: 6px;
+}
+
+h3 {
+    color: #00FFF0;
+    font-weight: 300;
+}
+
+p {
+    color: #1CFF00;
+}
+
+.contenedor-precio {
+    color: #FF00d6;
+}
+
+.contenedor-imagenes {
+    width: 100px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    background-color: black;
 }
