--- a/gamestore/public/css/styles-productDetail.css
+++ b/gamestore/public/css/styles-productDetail.css
@@ -238,9 +238,8 @@ footer{
         min-width: 150px;
         margin-top: 15px;
         padding: 2px;
-        border: solid #d9d9d9 3px;
-        background-color: #d9d9d9;
-        opacity: 0.5;
+        border-bottom: solid #8F4DB5 3px;
+        background-color: #000;
         border-radius: 3px;
     }
     
@@ -256,10 +255,8 @@ footer{
         text-align: center;
         width: 35px;
         max-height: 25px;
-        background-color: #d9d9d9;
-        opacity: 0.5;
+        background-color: transparent;
         color: #666;
-        border: solid #d9d9d9 3px;
         border-radius: 3px;
         cursor: pointer;
         
