--- a/gamestore/views/productDetail.html
+++ b/gamestore/views/productDetail.html
@@ -59,7 +59,8 @@
                 <img class="esrb-photo" src="/images/ESRB-Teen.png" alt="ESRB Teen"><br>
                 <p class="esrb-detail">ESRB: Adolescentes</p>
             </div>
-            </article>
+        </article>
+        <section class="requisitos">
             <div class="tecnicos">
             <h4>Datos técnicos</h4>
             <article class="datos-tecnicos">
@@ -70,8 +71,8 @@
             <p>Género: Aventura</p>
             <p>Idiomas de pantalla: Alemán, Chino - Simplificado, Chino - Tradicional, Español, Francés (Francia), Inglés, Portugués (Brasil), Ruso.</p>
             </div>
-        </article>
-        <article class="requisitos-pc">
+            </article>
+            <article class="requisitos-pc">
             <h4>Requisitos del sistema</h4>
             <h6>MÍNIMO:</h6>
             <div class="requisitos-min"> 
@@ -85,8 +86,8 @@
             </div>
                 <h6>RECOMENDADO:</h6>
                 <p class="requisitos-min">Requiere un procesador y un sistema operativo de 64 bits</p>
-            </div>
-        </article>
+            </article>
+    </section>
     </section>
     <section>
         <article class="resumen">
